fix: codeblock padding on small device

--- a/components/ui/codeblock.module.sass
+++ b/components/ui/codeblock.module.sass
@@ -1,5 +1,5 @@
 .codeblock
-  padding: 2.5rem 2rem
+  padding: 2.5rem 1rem
   margin: 1.4rem -1rem
   overflow-x: auto
   font-size: 0.9rem
@@ -7,5 +7,6 @@
 
   @media screen and (min-width: 768px)
     border-radius: 0.2rem
+    padding: 2.5rem 2rem
     margin: 1.4rem -2rem
     
